<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="not_logged_in">Not Logged In</string>
    <string name="logged_in_as">Logged In As</string>
    <string name="title_notification_types">Notification Types</string>

    <string-array name="notification_types">
        <item>Messages</item>
        <item>Notifications</item>
    </string-array>

    <string name="extension_description">View your latest messages or notifications from Facebook</string>
    <string name="extension_title">Facebook Updates</string>
    <string name="about_body">
<![CDATA[
        Many thanks to:<br>
        <b><a href="http://code.google.com/p/dashclock/">DashClock</a></b><i> by Roman Nurik</i><br>
        <b><a href="https://github.com/MartinvanZ/Inscription">Inscription</a></b><i> By Martin van Zuilekom</i><br>
        <b><a href="https://github.com/facebook/facebook-android-sdk">Facebook Android SDK</a></b><i> by Facebook</i><br>
        <b>John Seidner</b> for the updated Icons<br>
        <b>Niek Haarman</b> for the Dutch translation<br>
        <b>Andrea Baccega</b> for the Italian translation<br>
        <b>Goddchen</b> for the German translation<br>
        <b>Hunyady Márton</b> for the Hungarian translation<br>
        <b>Jonathan Búcaro</b> for the Spanish translation<br>
        <b>lolobosse</b> for the French translation<br><br>
        <a href="https://play.google.com/store/apps/details?id=com.brennasoft.dashclockfacebookextension">Rate/Review</a><br>
        <a href="https://github.com/robbypond/dashclock-facebook-extension/">Feature Requests/Issues</a><br>
        <a href="http://play.google.com/store/apps/developer?id=BrennaSoft">More Apps by Brennasoft</a><br>
        <i><a href="mailto:support@brennasoft.com?subject=DashClockFacebookExtension">support@brennasoft.com</a></i><br>
    ]]>
    </string>
    <string name="close">Close</string>
    <string name="about">About</string>
    <string name="changelog">Changelog</string>
    <string name="title_show_always">Always show extension</string>
    <string name="summary_show_always">Always show extension even when there aren\'t any notifications</string>
    <string name="title_app">Choose preferred app</string>
    <string name="donate">Support/Donate</string>

    <string-array name="donate_texts">
        <item>Buy me a coffee (7–11) - $1</item>
        <item>Buy me a coffee (Starbucks) - $3</item>
        <item>Buy me a beer - $5</item>
    </string-array>

    <string name="donate_header">
<![CDATA[<h4>Why donate?</h4>
It would totally make my day and put a smile on my face.<br>
It will motivate me to keep going, and keep improving the app.<br>
Thanks!
]]>
    </string>

    <plurals name="message">
        <item quantity="one">1 Message</item>
        <item quantity="other">%d Messages</item>
    </plurals>
    <plurals name="notification">
        <item quantity="one">1 Notification</item>
        <item quantity="other">%d Notifications</item>
    </plurals>

    <string name="message_condensed">Mail: <xliff:g id="mailCount">%d</xliff:g></string>
    <string name="updates_condensed">Updates: <xliff:g id="updateCount">%d</xliff:g></string>
    <string name="expires">Facebook session expires today, Please login again in settings</string>
    <string name="title_mobile_site">Use Mobile Site</string>
    <string name="summary_mobile_site">Use Mobile when viewing with browser</string>
    <string name="title_display_style">Display Style</string>

    <string-array name="display_style_names">
        <item>Default</item>
        <item>Condensed</item>
    </string-array>

    <string name="title_include_preview">Include Preview</string>
    <string name="summary_include_preview">Include preview of latest update on lockscreen</string>
    <string name="pref_category_display">Display</string>
    <string name="pref_category_app">Launch App</string>
    <string name="login_failure">Login Failed, Please check your network connection and try again.</string>
    <string name="title_clear_notifications">Clear notifications</string>
    <string name="title_launch_messenger_on_message">Launch Messenger on Message</string>
    <string name="title_update_on_screen_on">Update on screen on</string>
    <string name="summary_update_on_screen_on">This may cause increased data usage.</string>
    <string name="clear_summary">This may not update immediately in the extension and may not clear all notifications.</string>
    <string name="title_notification_applications">Applications included</string>
    <string name="pref_category_filter">Notification Filter</string>
    <string name="summary_filter_notifications">Filter Notifications by Application</string>
    <string name="title_filter_notifications">Filter Notifications</string>
    <string name="summary_website_notifications">Open notifications when using browser</string>
    <string name="title_website_notifications">Use Notifications Page</string>
    <string name="app_icon">App Icon</string>
    <string name="title_changelog">Changelog</string>

    <string-array name="application_names">
        <item>Events</item>
        <item>Likes</item>
        <item>Feed Comments</item>
        <item>Places</item>
        <item>Links</item>
        <item>Photos</item>
        <item>Videos</item>
        <item>Pages</item>
        <item>Wall</item>
    </string-array>

</resources>